Add selenium to Travis.

--- a/.travis.yml
+++ b/.travis.yml
@@ -75,6 +75,16 @@ before_script:
   - sudo cat /var/log/apache2/error.log
 
 script:
+  # Create display.
+  - export DISPLAY=:99.0
+  - sh -e /etc/init.d/xvfb start
+  - sleep 3 # give xvfb some time to start
+
+  # Run selenium.
+  - wget http://selenium-release.storage.googleapis.com/2.40/selenium-server-standalone-2.40.0.jar
+  - java -jar selenium-server-standalone-2.40.0.jar -p 4444 &
+  - sleep 5
+
   - ./bin/behat --tags=$TEST_SUITE
 
 after_script:
