Remove WIP tests.

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,9 +9,7 @@ mysql:
   encoding: utf8
 
 env:
-  - TEST_SUITE=first
-  - TEST_SUITE=last
-
+  - TEST_SUITE=javascript
 
 before_script:
   - export PATH="$HOME/.composer/vendor/bin:$PATH"
@@ -85,7 +83,7 @@ script:
   - java -jar selenium-server-standalone-2.40.0.jar -p 4444 &
   - sleep 5
 
-  - ./bin/behat --tags=javascript
+  - ./bin/behat --tags=$TEST_SUITE
 
 after_script:
     - sudo cat /var/log/apache2/error.log
